--- a/style.css
+++ b/style.css
@@ -1,7 +1,24 @@
 html {
     box-sizing: border-box;
     font-family: Helvetica, Arial, sans-serif;
-  }
+}
 *, *::before, *::after {
 box-sizing: inherit;
+}
+
+h1 {
+    text-align: center;
+    font-size: 3em;
+    margin: 3rem auto;
+    padding: 1rem;
+    border-radius: 1em;
+    background-color: #4ca4a4;
+    width: 400px
+}
+.recipe {
+
+}
+.main-photo {
+    display: block;
+    margin: 0px auto;
 }
